[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { git = "https://github.com/not-fl3/macroquad.git" }
pollster = "0.3.0"
macroquad-profiler = { git = "https://github.com/not-fl3/macroquad.git" }
miniquad = { version = "0.4.0-alpha.3", features = ["log-impl"] }

#[profile.dev]
#opt-level = 1

[profile.dev.package."*"]
opt-level = 3